--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
     <link rel="stylesheet" href="./css/forca.css" media="screen">
     <title>Jogo da Forca</title>
+     <link rel="stylesheet" href="style.css">
     <link href="https://paloma14alves.github.io/Desafio-Oracle-jogo-da-forca/style.css" rel="stylesheet">
     <script src="https://paloma14alves.github.io/Desafio-Oracle-jogo-da-forca/script.js"> </script>
     
